# docstore-manager

./: .clinerules  .gitignore  docker-compose.yml  docstore-manager_module.md  fix_vectors.py  pyproject.toml  solr_docs.json  test_docs.json  test_failures_report.md
cline_docs/: activeContext.md  changelog.md  doc_tracker.md  hdta_review_progress_20250503.md  hierarchical_task_checklist_20250503.md  module_relationship_tracker.md  progress.md  system_manifest.md
cline_docs/Archive/session_trackers/: hdta_review_progress_20250503.md  hdta_review_progress_20250504.md  hierarchical_task_checklist_20250503.md  (+1 more)
docstore_manager/: __main__.py  cli.py  entrypoint.py
docstore_manager/common/: __init__.py  utils.py
docstore_manager/core/: __init__.py  utils.py
docstore_manager/qdrant/: __init__.py  cli.py  client.py  command.py  config.py  format.py  utils.py
docstore_manager/solr/: __init__.py  cli.py  client.py  command.py  config.py  format.py  utils.py
implementation_plans/: implementation_plan_code_quality.md  implementation_plan_documentation.md  implementation_plan_release_prep.md
src/: src_module.md
src/docstore-manager/: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  query.json  requirements.txt  setup.py  test_output.txt
tasks/: Strategy_create_usage_examples.md  Strategy_fix_cli_testing_context.md  Strategy_fix_collection_info_formatting.md  Strategy_fix_collectionconfig_validation.md  Strategy_fix_parameter_validation.md  Strategy_prepare_pypi_package.md  Strategy_reduce_complexity.md  Strategy_standardize_interfaces.md  Strategy_update_readme.md  Strategy_update_version.md  task_002.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_012.txt  task_014.txt
tests/common/: test_exceptions.py  test_formatting.py  test_response.py  test_utils.py
tests/fixtures/: test_qdrant_docs.jsonl  test_qdrant_docs_ids.txt
tests/integration/: config.yaml  test_qdrant_integration.py  test_solr_integration.py
tests/qdrant/: test_format.py  test_qdrant_cli.py  test_qdrant_client.py  test_qdrant_command.py  test_qdrant_utils.py
tests/solr/: test_solr_cli.py  test_solr_client.py  test_solr_command.py  test_solr_format.py  test_solr_utils.py
(+129 files in other folders)
