[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docstore-manager"
version = "0.1.6"
description = "Command-line tools for managing document stores like Qdrant and Solr"
readme = "README.md"
authors = [
    {name = "Allen Day", email = "allenday@example.com"}
]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "qdrant-client>=1.14.2",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "appdirs>=1.4.4",
    "pysolr>=3.9.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "kazoo>=2.9.0"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/allenday/qdrant-manager"
"Bug Reports" = "https://github.com/allenday/qdrant-manager/issues"

[project.scripts]
docstore-manager = "docstore_manager.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["docstore_manager*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "integration: mark test as an integration test",
    # Add other markers here if needed in the future
]

[tool.coverage.run]
source = ["docstore_manager"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "pass",
    "raise NotImplementedError",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.7"
pytest-env = "^1.1.3"
ruff = "^0.5.5"
mypy = "^1.11.0"
pre-commit = "^3.8.0"
pylint = "^3.2.6"
# Add missing test dependencies
qdrant-client = "^1.9.0" # Or specify version constraint as needed
pytest-mock = "^3.12.0" # Or specify version constraint as needed